# tarea2_distr_avanz

./: .gitignore  CMakeLists.txt  Makefile  README.md  checktest  main.c  mpi_example.c  scatter_example.c  tutorial_example.c
examples/: 10_graph  13_graph  15_graph  20_graph  30_graph  5_graph
include/: input_reader.h  minor_tools.h  pointer_stack.h
src/: input_reader.c  minor_tools.c  pointer_stack.c
test/: pointer_stack_test.c  pointer_stack_test.h  test.c
test/include/: minor_tools_test.h  test_tools.h
test/src/: minor_tools_test.c  pointer_stack_test.c  test_tools.c
